modified:   _notebooks/Foundation/2024-09-09-planning-notebook.ipynb

--- a/_notebooks/Foundation/2024-09-09-planning-notebook.ipynb
+++ b/_notebooks/Foundation/2024-09-09-planning-notebook.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Goals Accomplished:"
+    "Goals Accomplished/Attempted:"
    ]
   },
   {
@@ -36,11 +36,15 @@
     "\n",
     "-Add a new page about a specific content\n",
     "\n",
-    "-Use emojis\n",
+    "-Attempted to use emojis. I got the error: \"externally managed environment\" so I had to activate the virtual environment in order to make it work, it took me some time to figure it out.\n",
     "\n",
     "-Add mario\n",
     "\n",
-    "-Add f1 car that can be controlled with arrow keys"
+    "-Added a bunch of notebooks with different content depending on what I was asked to do\n",
+    "\n",
+    "-Add f1 car that can be controlled with arrow keys\n",
+    "\n",
+    "-Attempted to make a little soccer but I didn't have time to make it work so I will be trying it again in the future."
    ]
   }
  ],
