--- a/_notebooks/Foundation/2024-09-10-emoji.ipynb
+++ b/_notebooks/Foundation/2024-09-10-emoji.ipynb
@@ -10,8 +10,8 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Emojis \n",
-    "description:  Adding emojis with python\n",
+    "title: Hacks Tools & Equipment Play\n",
+    "description: GitHub pages was built with Python and Jupyter Notebooks in mind. This post is to verify tools by using Python.\n",
     "type: issues \n",
     "comments: true\n",
     "---"
@@ -33,6 +33,73 @@
    "source": [
     "from emoji import emojize \n",
     "print(emojize(\":thumbs_up: Python is awesome! :grinning_face:\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python (programming language)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Python is a high-level, general-purpose programming language. Its design philosophy emphasizes code readability with the use of significant indentation.\n",
+       "Python is dynamically typed and garbage-collected. It supports multiple programming paradigms, including structured (particularly procedural), object-oriented and functional programming. It is often described as a \"batteries included\" language due to its comprehensive standard library.\n",
+       "Guido van Rossum began working on Python in the late 1980s as a successor to the ABC programming language and first released it in 1991 as Python 0.9.0. Python 2.0 was released in 2000. Python 3.0, released in 2008, was a major revision not completely backward-compatible with earlier versions. Python 2.7.18, released in 2020, was the last release of Python 2.\n",
+       "Python consistently ranks as one of the most popular programming languages, and has gained widespread use in the machine learning community.\n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JavaScript\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "JavaScript (), often abbreviated as JS, is a programming language and core technology of the Web, alongside HTML and CSS. 99% of websites use JavaScript on the client side for webpage behavior.\n",
+       "Web browsers have a dedicated JavaScript engine that executes the client code. These engines are also utilized in some servers and a variety of apps. The most popular runtime system for non-browser usage is Node.js.\n",
+       "JavaScript is a high-level, often just-in-time compiled language that conforms to the ECMAScript standard. It has dynamic typing, prototype-based object-orientation, and first-class functions. It is multi-paradigm, supporting event-driven, functional, and imperative programming styles. It has application programming interfaces (APIs) for working with text, dates, regular expressions, standard data structures, and the Document Object Model (DOM).\n",
+       "The ECMAScript standard does not include any input/output (I/O), such as networking, storage, or graphics facilities. In practice, the web browser or other runtime system provides JavaScript APIs for I/O.\n",
+       "Although Java and JavaScript are similar in name, syntax, and respective standard libraries, the two languages are distinct and differ greatly in design."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import wikipedia \n",
+    "from IPython.display import display, Markdown # add for Jupyter\n",
+    "\n",
+    "terms = [\"Python (programming language)\", \"JavaScript\"]\n",
+    "for term in terms:\n",
+    "    # Search for a page \n",
+    "    result = wikipedia.search(term)\n",
+    "    # Get the summary of the first result\n",
+    "    summary = wikipedia.summary(result[0])\n",
+    "    print(term) \n",
+    "    # print(summary) # console display\n",
+    "    display(Markdown(summary)) # Jupyter display"
    ]
   }
  ],
