Completing games page

--- a/_notebooks/Foundation/2024-09-09-planning-notebook.ipynb
+++ b/_notebooks/Foundation/2024-09-09-planning-notebook.ipynb
@@ -44,7 +44,15 @@
     "\n",
     "-Add f1 car that can be controlled with arrow keys\n",
     "\n",
-    "-Attempted to make a little soccer but I didn't have time to make it work so I will be trying it again in the future."
+    "-Attempted to make a little soccer but I didn't have time to make it work so I will be trying it again in the future.\n",
+    "\n",
+    "-Add several games\n",
+    "\n",
+    "-Be able to search music and listen to it\n",
+    "\n",
+    "-Binary Calculator\n",
+    "\n",
+    "-Keep editing the page's theme and adding more functionalities"
    ]
   }
  ],
