--- a/_notebooks/CSP/big-ideas/big-idea-3-part-1-fundamentals/2023-10-10-big-idea-3-6.ipynb
+++ b/_notebooks/CSP/big-ideas/big-idea-3-part-1-fundamentals/2023-10-10-big-idea-3-6.ipynb
@@ -109,7 +109,33 @@
     "if int(age) >= 18:\n",
     "    print(\"Adult\")\n",
     "else:\n",
-    "    print(\"Minor\")\n"
+    "    print(\"Minor\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## JavaScript\n",
+    "This is the JS equivalent of the code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let age = prompt(\"Enter your age:\");\n",
+    "if (parseInt(age) >= 18) {\n",
+    "    console.log(\"Adult\");\n",
+    "} else {\n",
+    "    console.log(\"Minor\");\n",
+    "}"
    ]
   },
   {
@@ -137,6 +163,32 @@
     "    print(\"Bring a umbrella\")\n",
     "else:\n",
     "    print(\"The weather is clear\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## JavaScript\n",
+    "This is the JS equivalent of the code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let isRaining = false;\n",
+    "if (isRaining) {\n",
+    "    console.log(\"Bring an umbrella\");\n",
+    "} else {\n",
+    "    console.log(\"The weather is clear\");\n",
+    "}"
    ]
   },
   {
@@ -173,6 +225,38 @@
     "else:\n",
     "    print( str(a) + \" = \" + str(b) )\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## JavaScript\n",
+    "This is the JS equivalent of the code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let a = Math.floor(Math.random() * 101); // Random number between 0 and 100\n",
+    "let b = Math.floor(Math.random() * 101);\n",
+    "\n",
+    "console.log(a, b);\n",
+    "\n",
+    "if (a > b) {\n",
+    "    console.log(a + \" > \" + b);\n",
+    "} else if (a < b) {\n",
+    "    console.log(a + \" < \" + b);\n",
+    "} else {\n",
+    "    console.log(a + \" = \" + b);\n",
+    "}"
    ]
   },
   {
@@ -253,6 +337,58 @@
     "# Display the final score\n",
     "# Calculate the percentage of correct answers and provide feedback\n",
     "print(user_name + \", you scored \" + str(correct) + \"/\" + str(questions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Import necessary modules\n",
+    "// In JavaScript, we don't need to import for basic input/output operations\n",
+    "\n",
+    "// Function to ask a question and get a response\n",
+    "function questionWithResponse(prompt) {\n",
+    "    // Print the question\n",
+    "    // Get user input as the response\n",
+    "    return prompt(prompt);\n",
+    "}\n",
+    "\n",
+    "// Define the number of questions and initialize the correct answers counter\n",
+    "let questions = 5;\n",
+    "let correct = 0;\n",
+    "\n",
+    "// Personalized greeting message\n",
+    "// Collect the student's name\n",
+    "let userName = questionWithResponse(\"Enter your name: \");\n",
+    "console.log('Hello, ' + userName + \" you are running JavaScript in the browser!\");\n",
+    "\n",
+    "let ready = questionWithResponse(\"Are you ready to take a test? (yes/no): \");\n",
+    "\n",
+    "// Question 1: Boolean Basics \n",
+    "// Ask a question about Boolean values and check the response\n",
+    "// Provide feedback based on the correctness of the response\n",
+    "\n",
+    "// Question 2: Boolean Expressions\n",
+    "// Ask a question about Boolean expressions and their importance in programming\n",
+    "// Provide feedback based on the correctness of the response\n",
+    "\n",
+    "// Question 3: Conditional Statements\n",
+    "// Ask a question about the purpose of conditional (if-else) statements in programming\n",
+    "// Provide feedback based on the correctness of the response\n",
+    "\n",
+    "// Question 4: Relational Operators\n",
+    "// Ask a question about common relational operators in programming and provide examples\n",
+    "// Provide feedback based on the correctness of the response\n",
+    "\n",
+    "// Question 5: Logical Operators\n",
+    "// Ask a question about the use of logical operators in programming and provide examples\n",
+    "// Provide feedback based on the correctness of the response\n",
+    "\n",
+    "// Display the final score\n",
+    "// Calculate the percentage of correct answers and provide feedback\n",
+    "console.log(userName + \", you scored \" + correct + \"/\" + questions);"
    ]
   }
  ],
