fixing make error

--- a/_notebooks/CSP/big-ideas/big-idea-3-part-1-fundamentals/2023-10-10-big-idea-3-6.ipynb
+++ b/_notebooks/CSP/big-ideas/big-idea-3-part-1-fundamentals/2023-10-10-big-idea-3-6.ipynb
@@ -342,7 +342,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [],
    "source": [
     "// Import necessary modules\n",
