--- a/_notebooks/CSP/big-ideas/big-idea-3-part-1-fundamentals/2023-10-11-big-idea-3-7.ipynb
+++ b/_notebooks/CSP/big-ideas/big-idea-3-part-1-fundamentals/2023-10-11-big-idea-3-7.ipynb
@@ -164,6 +164,44 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "source": [
+    "# Javascript\n",
+    "\n",
+    "Here is the equivalent Javascript code example: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let score = 85;\n",
+    "\n",
+    "if (score >= 90) {\n",
+    "    console.log(\"A\");\n",
+    "} else if (score >= 80) {\n",
+    "    console.log(\"B\");\n",
+    "} else if (score >= 70) {\n",
+    "    console.log(\"C\");\n",
+    "} else if (score >= 60) {\n",
+    "    console.log(\"D\");\n",
+    "} else {\n",
+    "    console.log(\"F\");\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "`Example 2: Determining Eligibility for a Loan`\n",
@@ -225,6 +263,39 @@
     "        print(\"Not eligible for loan due to low income\")\n",
     "else:\n",
     "    print(\"Not eligible for loan due to low credit score\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Javascript\n",
+    "\n",
+    "Here is the equivalent Javascript code: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let credit_score = 750;\n",
+    "let income = 60000;\n",
+    "\n",
+    "if (credit_score >= 700) {\n",
+    "    if (income >= 50000) {\n",
+    "        console.log(\"Eligible for loan\");\n",
+    "    } else {\n",
+    "        console.log(\"Not eligible for loan due to low income\");\n",
+    "    }\n",
+    "} else {\n",
+    "    console.log(\"Not eligible for loan due to low credit score\");\n",
+    "}\n"
    ]
   },
   {
