--- a/_notebooks/CSP-Hacks/2024-07-10-3.1_and_3.4-hacks.ipynb
+++ b/_notebooks/CSP-Hacks/2024-07-10-3.1_and_3.4-hacks.ipynb
@@ -7,8 +7,7 @@
     "---\n",
     "layout: post\n",
     "title: 3.1 and 3.4 Popcorn and HW Hacks\n",
-    "description: Hacks\n",
-    "categories: [JavaScript]\n",
+    "description: Javascript and Python Hacks\n",
     "---"
    ]
   },
