--- a/_notebooks/CSP-Hacks/2024-10-09-3.2Hacks.ipynb
+++ b/_notebooks/CSP-Hacks/2024-10-09-3.2Hacks.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: 3.1 and 3.4 Popcorn and HW Hacks\n",
-    "description: Javascript and Python Hacks\n",
+    "title: 3.2 Hacks\n",
+    "description: Python Hacks\n",
     "---"
    ]
   },
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hack #2"
+    "## Hack #3"
    ]
   },
   {
@@ -168,6 +168,88 @@
     "    for renter in movie['renters']:\n",
     "        print(f\" - {renter['name']} (Rented on: {renter['rent_date']})\")\n",
     "    print(\"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hack #2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sprints = {\n",
+    "    'Sprint1': ['Frontend Development', 'Github Pages Playground', 'Javascript Playground', 'SASS Basics'],\n",
+    "    'Sprint2': ['Big Ideas 3.6', 'Big Ideas 3.7']\n",
+    "}\n",
+    "\n",
+    "print(sprints['Sprint1'])\n",
+    "if \"Frontend Development\" in sprints['Sprint1']:\n",
+    "    print(True) \n",
+    "else:\n",
+    "    print(False)\n",
+    "print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HW Hack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_rentals = [\n",
+    "    {\n",
+    "        \"title\": \"Inception\",\n",
+    "        \"director\": \"Christopher Nolan\",\n",
+    "        \"genre\": \"Sci-Fi\",\n",
+    "        \"copies_available\": 3,\n",
+    "        \"renters\": [\n",
+    "            {\"name\": \"John Smith\", \"rent_date\": \"2024-10-01\"},\n",
+    "            {\"name\": \"Alice Johnson\", \"rent_date\": \"2024-10-03\"}\n",
+    "        ]\n",
+    "    },\n",
+    "    {\n",
+    "        \"title\": \"The Godfather\",\n",
+    "        \"director\": \"Francis Ford Coppola\",\n",
+    "        \"genre\": \"Crime\",\n",
+    "        \"copies_available\": 1,\n",
+    "        \"renters\": [\n",
+    "            {\"name\": \"Emily Davis\", \"rent_date\": \"2024-09-28\"}\n",
+    "        ]\n",
+    "    },\n",
+    "    {\n",
+    "        \"title\": \"The Lord of the Rings: The Return of the King\",\n",
+    "        \"director\": \"Peter Jackson\",\n",
+    "        \"genre\": \"Fantasy\",\n",
+    "        \"copies_available\": 0,\n",
+    "        \"renters\": [\n",
+    "            {\"name\": \"Michael Brown\", \"rent_date\": \"2024-09-25\"},\n",
+    "            {\"name\": \"Laura Wilson\", \"rent_date\": \"2024-09-30\"}\n",
+    "        ]\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "for movie in movie_rentals:\n",
+    "    print(f\"Title: {movie['title']}\")\n",
+    "    print(f\"Director: {movie['director']}\")\n",
+    "    print(f\"Genre: {movie['genre']}\")\n",
+    "    print(f\"Copies Available: {movie['copies_available']}\")\n",
+    "    print(\"Renters:\")\n",
+    "    for renter in movie['renters']:\n",
+    "        print(f\" - {renter['name']} (Rented on: {renter['rent_date']})\")\n",
+    "    print(\"\\n\")"
    ]
   }
  ],
