--- a/_notebooks/CSP-Hacks/2024-10-09-3.2Hacks.ipynb
+++ b/_notebooks/CSP-Hacks/2024-10-09-3.2Hacks.ipynb
@@ -205,9 +205,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title: Inception\n",
+      "Director: Christopher Nolan\n",
+      "Genre: Sci-Fi\n",
+      "Copies Available: 3\n",
+      "Renters:\n",
+      " - John Smith (Rented on: 2024-10-01)\n",
+      " - Alice Johnson (Rented on: 2024-10-03)\n",
+      "\n",
+      "\n",
+      "Title: The Godfather\n",
+      "Director: Francis Ford Coppola\n",
+      "Genre: Crime\n",
+      "Copies Available: 1\n",
+      "Renters:\n",
+      " - Emily Davis (Rented on: 2024-09-28)\n",
+      "\n",
+      "\n",
+      "Title: The Lord of the Rings: The Return of the King\n",
+      "Director: Peter Jackson\n",
+      "Genre: Fantasy\n",
+      "Copies Available: 0\n",
+      "Renters:\n",
+      " - Michael Brown (Rented on: 2024-09-25)\n",
+      " - Laura Wilson (Rented on: 2024-09-30)\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "movie_rentals = [\n",
     "    {\n",
