Sprint 2 Accomplishments, part 1

--- a/_notebooks/Foundation/2024-09-09-sprint1_accomplishments.ipynb
+++ b/_notebooks/Foundation/2024-09-09-sprint1_accomplishments.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Planning \n",
+    "title: Sprint 1 Accomplishments \n",
     "description:  Goals-Achievements\n",
     "type: issues \n",
     "comments: true\n",
