Linked Lessons to sprint 2 accomplishments

--- a/_notebooks/Foundation/2024-10-14-sprint2_accomplishments.ipynb
+++ b/_notebooks/Foundation/2024-10-14-sprint2_accomplishments.ipynb
@@ -40,7 +40,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lessons Taught\n"
+    "# Lessons Taught\n",
+    "<a href=\"{{site.baseurl}}/csp/big-idea/3-6/p1/lesson\">3.6 Lesson</a>\n",
+    "<a href=\"{{site.baseurl}}/csp/big-idea/3-7/p1/lesson\">3.7 Lesson</a>"
    ]
   }
  ],
