Completing Sprint2 Accomplishments

--- a/_notebooks/Foundation/2024-10-14-sprint2_accomplishments.ipynb
+++ b/_notebooks/Foundation/2024-10-14-sprint2_accomplishments.ipynb
@@ -33,7 +33,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Completed Hacks\n"
+    "# Unit Content\n",
+    "- 3.1 Variables\n",
+    "\n",
+    "\n",
+    "- 3.2 Data Abstraction\n",
+    "\n",
+    "\n",
+    "- 3.3 Mathematical Expressions\n",
+    "\n",
+    "\n",
+    "- 3.4 Strings\n",
+    "\n",
+    "\n",
+    "- 3.5 Booleans\n",
+    "\n",
+    "\n",
+    "- 3.6 Conditionals\n",
+    "\n",
+    "\n",
+    "- 3.7 Nested Conditionals\n",
+    "\n",
+    "\n",
+    "- 3.8 Iteration\n",
+    "\n",
+    "\n",
+    "- 3.10 Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Completed Hacks\n",
+    "<a href=\"{{site.baseurl}}/2024/10/07/3.1_and_3.4-hacks_IPYNB_2_.html\">3.1 and 3.4 Hacks</a>\n",
+    "\n",
+    "\n",
+    "<a href=\"{{site.baseurl}}/2024/10/09/3.2Hacks_IPYNB_2_.html\">3.2 Hacks</a>\n",
+    "\n",
+    "\n",
+    "<a href=\"{{site.baseurl}}/2024/10/11/3.3_3.5_Hacks_IPYNB_2_.html\">3.3 Hacks</a>\n",
+    "\n",
+    "\n",
+    "<a href=\"{{site.baseurl}}/2024/10/10/3.8Hacks_IPYNB_2_.html\">3.8 Hacks</a>\n",
+    "\n",
+    "<a href=\"{{site.baseurl}}/2024/10/10/3.10-Hacks_IPYNB_2_.html\">3.10 Hacks</a>\n",
+    "\n"
    ]
   },
   {
