--- a/_notebooks/Foundation/2024-10-14-sprint2_accomplishments.ipynb
+++ b/_notebooks/Foundation/2024-10-14-sprint2_accomplishments.ipynb
@@ -20,9 +20,10 @@
     "Thorough this week I learned about variables, data types, mathematical expressions, strings, booleans, conditionals, nested conditionals, iteration and lists in Python and Javascript. I also learned how to solve problems using Pseudocode instead of actual code.\n",
     "\n",
     "This is why I know my units: Every lesson had to be reinforced through practical uses and hacks that I had to complete. These assignments needed me to show my mastery in tangible ways so as not to passively get by learning it. \n",
+    "\n",
     "That is how I construct a summary on my blog: reflecting on how well I know the content, determining how I will review them when necessary. This reflection will help me keep track of my progress.\n",
     "\n",
-    "This is how you know I am more than be perfunctory on my learning journey: I applied the knowledge in the hacks and reflected on each topic thoughtfully that I learn. Here are some memories from my homework, learning, and teaching moments: each hack brought different challenges and other insights helpful in making concrete my learning of the subject matter.\n",
+    "This is how you know I am more than be perfunctory on my learning journey: I applied the knowledge in the hacks and reflected on each topic thoughtfully that I learn. Each hack brought different challenges and other insights helpful in making concrete my learning of the content.\n",
     "\n",
     "Here are some memories from my homework, learning and teaching: I remember when we were creating the hacks for our lesson, it took us some time to figure out what the right one would be, since there were many different ways of using the content that we just taught. I also remember doing the hacks for most groups and how, a lot of times, it required me to go back to the lesson in order to make sure that I was doing the hack in the right way.\n",
     "\n",
