update sprint3 accomplishments

--- a/_notebooks/Foundation/2024-10-25-sprint3_accomplishments.ipynb
+++ b/_notebooks/Foundation/2024-10-25-sprint3_accomplishments.ipynb
@@ -16,6 +16,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Week 1\n",
+    "### Big Idea 1.1 Collaboration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "In our project on developing a social media page about school sports (football), we’re seeing firsthand how collaboration can improve computing innovations. Here’s how we’re tackling it:\n",
     "\n",
