fixing images layout

--- a/_notebooks/Foundation/2024-10-25-sprint3_accomplishments.ipynb
+++ b/_notebooks/Foundation/2024-10-25-sprint3_accomplishments.ipynb
@@ -61,9 +61,9 @@
     "    }\n",
     "    .grid-container {\n",
     "      display: grid;\n",
-    "      grid-template-columns: repeat(4, 1fr);\n",
-    "      gap: 10px;\n",
-    "      max-width: 600px;\n",
+    "      grid-template-columns: repeat(3, 1fr); /* 3 columns */\n",
+    "      gap: 15px;\n",
+    "      max-width: 900px; /* Increased max width for larger images */\n",
     "      width: 100%;\n",
     "      padding: 20px;\n",
     "      box-sizing: border-box;\n",
@@ -71,7 +71,7 @@
     "    .grid-item {\n",
     "      background-color: #ddd;\n",
     "      width: 100%;\n",
-    "      padding-top: 100%; /* 1:1 Aspect Ratio */\n",
+    "      padding-top: 100%; /* Keeps images square */\n",
     "      position: relative;\n",
     "    }\n",
     "    .grid-item img {\n",
@@ -81,11 +81,6 @@
     "      width: 100%;\n",
     "      height: 100%;\n",
     "      object-fit: cover;\n",
-    "    }\n",
-    "    /* Hide the last grid cell on the first row */\n",
-    "    .grid-container > .grid-item:nth-child(3):after {\n",
-    "      content: \"\";\n",
-    "      grid-column: span 1;\n",
     "    }\n",
     "  </style>\n",
     "</head>\n",
@@ -101,7 +96,7 @@
     "    <div class=\"grid-item\"><img src=\"{{site.baseurl}}/images/flocker_progress/visual_design_flocker.png\" alt=\"Image 7\"></div>\n",
     "  </div>\n",
     "\n",
-    "</body>"
+    "</body>\n"
    ]
   }
  ],
