Second week sprint3 accomplishments

--- a/_notebooks/Foundation/2024-10-25-sprint3_accomplishments.ipynb
+++ b/_notebooks/Foundation/2024-10-25-sprint3_accomplishments.ipynb
@@ -49,54 +49,75 @@
     "<head>\n",
     "  <meta charset=\"UTF-8\">\n",
     "  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
-    "  <title>Centered Image Grid</title>\n",
+    "  <title>Vertical Image Layout</title>\n",
     "  <style>\n",
-    "    body {\n",
-    "      display: flex;\n",
-    "      justify-content: center;\n",
-    "      align-items: center;\n",
-    "      min-height: 100vh;\n",
-    "      margin: 0;\n",
-    "      background-color: #f0f0f0;\n",
-    "    }\n",
-    "    .grid-container {\n",
-    "      display: grid;\n",
-    "      grid-template-columns: repeat(3, 1fr); /* 3 columns */\n",
-    "      gap: 15px;\n",
-    "      max-width: 900px; /* Increased max width for larger images */\n",
-    "      width: 100%;\n",
-    "      padding: 20px;\n",
-    "      box-sizing: border-box;\n",
-    "    }\n",
-    "    .grid-item {\n",
-    "      background-color: #ddd;\n",
-    "      width: 100%;\n",
-    "      padding-top: 100%; /* Keeps images square */\n",
-    "      position: relative;\n",
-    "    }\n",
-    "    .grid-item img {\n",
-    "      position: absolute;\n",
-    "      top: 0;\n",
-    "      left: 0;\n",
-    "      width: 100%;\n",
-    "      height: 100%;\n",
-    "      object-fit: cover;\n",
+    "    .image-container img {\n",
+    "      max-width: 100%;\n",
+    "      height: auto;\n",
+    "      margin-bottom: 20px;\n",
+    "      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Optional shadow for aesthetics */\n",
     "    }\n",
     "  </style>\n",
     "</head>\n",
     "<body>\n",
     "\n",
-    "  <div class=\"grid-container\">\n",
-    "    <div class=\"grid-item\"><img src=\"{{site.baseurl}}/images/flocker_progress/flocker_Frontend_make.PNG\" alt=\"Image 1\"></div>\n",
-    "    <div class=\"grid-item\"><img src=\"{{site.baseurl}}/images/flocker_progress/github_sharedfork_frontend.PNG\" alt=\"Image 2\"></div>\n",
-    "    <div class=\"grid-item\"><img src=\"{{site.baseurl}}/images/flocker_progress/google_doc_flocker.png\" alt=\"Image 3\"></div>\n",
-    "    <div class=\"grid-item\"><img src=\"{{site.baseurl}}/images/flocker_progress/login_backend.PNG\" alt=\"Image 4\"></div>\n",
-    "    <div class=\"grid-item\"><img src=\"{{site.baseurl}}/images/flocker_progress/login_flocker.PNG\" alt=\"Image 5\"></div>\n",
-    "    <div class=\"grid-item\"><img src=\"{{site.baseurl}}/images/flocker_progress/postman_group.png\" alt=\"Image 6\"></div>\n",
-    "    <div class=\"grid-item\"><img src=\"{{site.baseurl}}/images/flocker_progress/visual_design_flocker.png\" alt=\"Image 7\"></div>\n",
+    "  <div class=\"image-container\">\n",
+    "    <img src=\"{{site.baseurl}}/images/flocker_progress/flocker_Frontend_make.PNG\" alt=\"Image 1\">\n",
+    "    <img src=\"{{site.baseurl}}/images/flocker_progress/github_sharedfork_frontend.PNG\" alt=\"Image 2\">\n",
+    "    <img src=\"{{site.baseurl}}/images/flocker_progress/google_doc_flocker.png\" alt=\"Image 3\">\n",
+    "    <img src=\"{{site.baseurl}}/images/flocker_progress/login_backend.PNG\" alt=\"Image 4\">\n",
+    "    <img src=\"{{site.baseurl}}/images/flocker_progress/login_flocker.PNG\" alt=\"Image 5\">\n",
+    "    <img src=\"{{site.baseurl}}/images/flocker_progress/postman_group.png\" alt=\"Image 6\">\n",
+    "    <img src=\"{{site.baseurl}}/images/flocker_progress/visual_design_flocker.png\" alt=\"Image 7\">\n",
     "  </div>\n",
     "\n",
-    "</body>\n"
+    "</body>\n",
+    "\n",
+    "https://docs.google.com/document/d/17NTxzOPUCTLTYmzFto4Ilbxx1yOnaCPo3Z-sko6RzcY/edit "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Week 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This week, our team realized that focusing on the frontend of our social media-inspired football page would improve user interaction and engagement, so we added features to allow reactions on each post, enhanced the chatbox, and refined the “add a new post” option. These changes fall under the social media category of computing innovation, but they also connect to user interface design, user experience, and information management. By understanding the inputs—like clicks, keyboard entries, and touch events—and how these generate outputs, such as visible reactions or text posts, we can create a more intuitive experience. \n",
+    "Currently, inputs trigger frontend events that update the page locally, but we plan to expand this by connecting to a backend database so all users see the same posts, reactions, and chat messages. This will involve coding segments and functions for algorithms that store, retrieve, and synchronize data, making the experience consistent across users. \n",
+    "Frontend coding organizes interactions through visible interfaces, handling inputs and events directly on the user's side, while backend coding, which manages data storage and logic, ensures the persistence and accessibility of shared content across devices. This distinction helps us understand the program's behavior during execution and will guide us in adding scalable backend solutions for synchronized social interaction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<head>\n",
+    "  <meta charset=\"UTF-8\">\n",
+    "  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
+    "  <title>Vertical Image Layout</title>\n",
+    "  <style>\n",
+    "    .image-container img {\n",
+    "      max-width: 100%;\n",
+    "      height: auto;\n",
+    "      margin-bottom: 20px;\n",
+    "      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Optional shadow for aesthetics */\n",
+    "    }\n",
+    "  </style>\n",
+    "</head>\n",
+    "<body>\n",
+    "\n",
+    "  <div class=\"image-container\">\n",
+    "    <img src=\"{{site.baseurl}}/images/flocker_progress/addapostupdate.PNG\" alt=\"Image 1\">\n",
+    "    <img src=\"{{site.baseurl}}/images/flocker_progress/announcementreactions.PNG\" alt=\"Image 2\">\n",
+    "    <img src=\"{{site.baseurl}}/images/flocker_progress/chatroom.PNG\" alt=\"Image 3\">\n",
+    "  </div>\n",
+    "\n",
+    "</body>"
    ]
   }
  ],
