--- a/_notebooks/Foundation/2024-11-19-mcqcorrections.ipynb
+++ b/_notebooks/Foundation/2024-11-19-mcqcorrections.ipynb
@@ -16,6 +16,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Analysis\n",
+    "## Questions\n",
     "### Q14\n",
     "There were 2 different programs. I chose **D**, but the right answer was **C**.  \n",
     "This is because the programs each display ten values, but each value displayed by program B is one greater than the corresponding value from program A.  \n",
@@ -113,7 +115,18 @@
     "\"Which of the following are ways in which a programmer can use abstraction to manage the complexity of a program?\"\n",
     "\n",
     "I chose **A** and **B**, but the right answers are **A** and **D**.  \n",
-    "This is because creating a list of names is an example of data abstraction, which helps programmers manage complexity.\n"
+    "This is because creating a list of names is an example of data abstraction, which helps programmers manage complexity.\n",
+    "\n",
+    "----\n",
+    "\n",
+    "## Skills To Work On\n",
+    "Skill 1.D: Design and evaluate computational solutions for a purpose.\n",
+    "Skill 3.C: Develop programs that incorporate abstractions.\n",
+    "Skill 4.B: Evaluate and test algorithms and programs.\n",
+    "Skill 5.E: Investigate computing innovations.\n",
+    "\n",
+    "\n",
+    "I need to work on carefully analyzing patterns, relationships, and problem requirements, as many of my mistakes came from overlooking specific details or misinterpreting key concepts like routing paths, bit calculations, or algorithm complexity. To improve, I’ll focus on breaking down problems systematically and reviewing the logic behind my answers to avoid assumptions.\n"
    ]
   }
  ],
