modified:   _notebooks/Foundation/2024-11-19-mcqcorrections.ipynb

--- a/_notebooks/Foundation/2024-11-19-mcqcorrections.ipynb
+++ b/_notebooks/Foundation/2024-11-19-mcqcorrections.ipynb
@@ -120,10 +120,10 @@
     "----\n",
     "\n",
     "## Skills To Work On\n",
-    "Skill 1.D: Design and evaluate computational solutions for a purpose.\n",
-    "Skill 3.C: Develop programs that incorporate abstractions.\n",
-    "Skill 4.B: Evaluate and test algorithms and programs.\n",
-    "Skill 5.E: Investigate computing innovations.\n",
+    "- Skill 1.D: Design and evaluate computational solutions for a purpose.\n",
+    "- Skill 3.C: Develop programs that incorporate abstractions.\n",
+    "- Skill 4.B: Evaluate and test algorithms and programs.\n",
+    "- Skill 5.E: Investigate computing innovations.\n",
     "\n",
     "\n",
     "I need to work on carefully analyzing patterns, relationships, and problem requirements, as many of my mistakes came from overlooking specific details or misinterpreting key concepts like routing paths, bit calculations, or algorithm complexity. To improve, I’ll focus on breaking down problems systematically and reviewing the logic behind my answers to avoid assumptions.\n"
