--- a/_notebooks/Foundation/2024-10-25-sprint3_accomplishments.ipynb
+++ b/_notebooks/Foundation/2024-10-25-sprint3_accomplishments.ipynb
@@ -119,6 +119,21 @@
     "\n",
     "</body>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Final Accomplishments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We found out how to create posts and store them in the backend. We groups and channels to post in them. We created a chatroom but we weren't able to finish it.\n",
+    "<img src=\"{{site.baseurl}}/images/flocker_progress/posts.PNG\" alt=\"Image 1\">"
+   ]
   }
  ],
  "metadata": {
