--- a/_notebooks/Foundation/2025-01-08-speakernotes.ipynb
+++ b/_notebooks/Foundation/2025-01-08-speakernotes.ipynb
@@ -7,7 +7,7 @@
     "---\n",
     "layout: post\n",
     "title: Speaker Notes  \n",
-    "description:  Student Panel Wednesday Jan 8th\n",
+    "description:  Student Panel Blog\n",
     "comments: true\n",
     "---"
    ]
